Staggered Stokes Test with Physical BCs employed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.15.0)
 
-PROJECT(MultiphaseStokes LANGUAGES C CXX Fortran)
+PROJECT(Staggered_Stokes_Test LANGUAGES C CXX Fortran)
 FIND_PACKAGE(IBAMR REQUIRED)
 
 SET(CXX_SRC
