Implementation of a full multigrid in IBAMR. Adds a copy of one of IBAMR's poisson multigrid strategies for testing. Appears to work in some instances, although in some oddities exist.
E.g. If no smoothing sweeps occur, the GMRES solver converges, but
accuracy deteriorates. If only pre smoothing occurs, GMRES solver does not
converge.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,3 +34,5 @@ TARGET_SOURCES(rbgs_smooth2d PRIVATE ${CXX_SRC2} ${F_SRC})
 TARGET_LINK_LIBRARIES(rbgs_smooth2d IBAMR::IBAMR2d)
 
 CONFIGURE_FILE(input2d_four ${CMAKE_CURRENT_BINARY_DIR}/input2d_four COPYONLY)
+
+ADD_SUBDIRECTORY(tests)
