add target smooth2d

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,10 @@ ADD_EXECUTABLE(solver2d solver.cpp)
 TARGET_SOURCES(solver2d PRIVATE ${CXX_SRC})
 TARGET_LINK_LIBRARIES(solver2d IBAMR::IBAMR2d)
 
-CONFIGURE_FILE(input2d_four ${CMAKE_CURRENT_BINARY_DIR}/input2d_four COPYONLY)
+ADD_EXECUTABLE(smooth2d smooth.cpp)
+TARGET_SOURCES(smooth2d PRIVATE ${CXX_SRC})
+TARGET_LINK_LIBRARIES(smooth2d IBAMR::IBAMR2d)
+
+CONFIGURE_FILE(input2d_five ${CMAKE_CURRENT_BINARY_DIR}/input2d_five COPYONLY)
 
 
