update cmake to build fortran file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,26 +1,29 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.15.0)
 
-PROJECT(MultiphaseStokes LANGUAGES C CXX)
+ENABLE_LANGUAGE(Fortran)
+PROJECT(MultiphaseStokes LANGUAGES C CXX Fortran)
 FIND_PACKAGE(IBAMR REQUIRED)
 
-SET(CXX_SRC
+SET(SRC
     VCTwoFluidStaggeredStokesOperator.cpp
     VCTwoFluidStaggeredStokesBoxRelaxationFACOperator.cpp
+    RBGS.f
     )
 
-
 ADD_EXECUTABLE(apply2d apply.cpp)
-TARGET_SOURCES(apply2d PRIVATE ${CXX_SRC})
+TARGET_SOURCES(apply2d PRIVATE ${SRC})
 TARGET_LINK_LIBRARIES(apply2d IBAMR::IBAMR2d)
 
 ADD_EXECUTABLE(solver2d solver.cpp)
-TARGET_SOURCES(solver2d PRIVATE ${CXX_SRC})
+TARGET_SOURCES(solver2d PRIVATE ${SRC})
 TARGET_LINK_LIBRARIES(solver2d IBAMR::IBAMR2d)
 
 ADD_EXECUTABLE(smooth2d smooth.cpp)
-TARGET_SOURCES(smooth2d PRIVATE ${CXX_SRC})
+TARGET_SOURCES(smooth2d PRIVATE ${SRC})
 TARGET_LINK_LIBRARIES(smooth2d IBAMR::IBAMR2d)
 
-CONFIGURE_FILE(input2d_five ${CMAKE_CURRENT_BINARY_DIR}/input2d_five COPYONLY)
+ADD_EXECUTABLE(rbgs_smooth2d smooth.cpp)
+TARGET_SOURCES(rbgs_smooth2d PRIVATE ${SRC})
+TARGET_LINK_LIBRARIES(rbgs_smooth2d IBAMR::IBAMR2d)
 
-
+CONFIGURE_FILE(input2d_four ${CMAKE_CURRENT_BINARY_DIR}/input2d_four COPYONLY)
