build fluid_multigrid for testing preconditioner

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,11 +4,7 @@ ENABLE_LANGUAGE(Fortran)
 PROJECT(MultiphaseStokes LANGUAGES C CXX Fortran)
 FIND_PACKAGE(IBAMR REQUIRED)
 
-SET(CXX_SRC1
-    VCTwoFluidStaggeredStokesOperator.cpp
-    )
-
-SET(CXX_SRC2
+SET(CXX_SRC
     VCTwoFluidStaggeredStokesOperator.cpp
     VCTwoFluidStaggeredStokesBoxRelaxationFACOperator.cpp
     )
@@ -18,21 +14,25 @@ SET(F_SRC
     )
 
 ADD_EXECUTABLE(apply2d apply.cpp)
-TARGET_SOURCES(apply2d PRIVATE ${CXX_SRC1})
+TARGET_SOURCES(apply2d PRIVATE ${CXX_SRC})
 TARGET_LINK_LIBRARIES(apply2d IBAMR::IBAMR2d)
 
 ADD_EXECUTABLE(solver2d solver.cpp)
-TARGET_SOURCES(solver2d PRIVATE ${CXX_SRC1})
+TARGET_SOURCES(solver2d PRIVATE ${CXX_SRC})
 TARGET_LINK_LIBRARIES(solver2d IBAMR::IBAMR2d)
 
 ADD_EXECUTABLE(smooth2d smooth.cpp)
-TARGET_SOURCES(smooth2d PRIVATE ${CXX_SRC2} ${F_SRC})
+TARGET_SOURCES(smooth2d PRIVATE ${CXX_SRC} ${F_SRC})
 TARGET_LINK_LIBRARIES(smooth2d IBAMR::IBAMR2d)
 
 ADD_EXECUTABLE(rbgs_smooth2d smooth.cpp)
-TARGET_SOURCES(rbgs_smooth2d PRIVATE ${CXX_SRC2} ${F_SRC})
+TARGET_SOURCES(rbgs_smooth2d PRIVATE ${CXX_SRC} ${F_SRC})
 TARGET_LINK_LIBRARIES(rbgs_smooth2d IBAMR::IBAMR2d)
 
-CONFIGURE_FILE(input2d_four ${CMAKE_CURRENT_BINARY_DIR}/input2d_four COPYONLY)
+ADD_EXECUTABLE(fluid_multigrid multigrid.cpp)
+TARGET_SOURCES(fluid_multigrid PRIVATE ${CXX_SRC} ${F_SRC})
+TARGET_LINK_LIBRARIES(fluid_multigrid IBAMR::IBAMR2d)
+
+CONFIGURE_FILE(input2d_five ${CMAKE_CURRENT_BINARY_DIR}/tests/fluid_multigrid/input2d_five COPYONLY)
 
 ADD_SUBDIRECTORY(tests)
