--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,25 +14,21 @@ SET(F_SRC
     )
 
 ADD_EXECUTABLE(apply2d apply.cpp)
-TARGET_SOURCES(apply2d PRIVATE ${CXX_SRC})
+TARGET_SOURCES(apply2d PRIVATE VCTwoFluidStaggeredStokesOperator.cpp)
 TARGET_LINK_LIBRARIES(apply2d IBAMR::IBAMR2d)
 
 ADD_EXECUTABLE(solver2d solver.cpp)
-TARGET_SOURCES(solver2d PRIVATE ${CXX_SRC})
+TARGET_SOURCES(solver2d PRIVATE VCTwoFluidStaggeredStokesOperator.cpp)
 TARGET_LINK_LIBRARIES(solver2d IBAMR::IBAMR2d)
 
 ADD_EXECUTABLE(smooth2d smooth.cpp)
-TARGET_SOURCES(smooth2d PRIVATE ${CXX_SRC} ${F_SRC})
+TARGET_SOURCES(smooth2d PRIVATE VCTwoFluidStaggeredStokesOperator.cpp VCTwoFluidStaggeredStokesBoxRelaxationFACOperator.cpp RBGS.f)
 TARGET_LINK_LIBRARIES(smooth2d IBAMR::IBAMR2d)
 
-ADD_EXECUTABLE(rbgs_smooth2d smooth.cpp)
-TARGET_SOURCES(rbgs_smooth2d PRIVATE ${CXX_SRC} ${F_SRC})
-TARGET_LINK_LIBRARIES(rbgs_smooth2d IBAMR::IBAMR2d)
-
 ADD_EXECUTABLE(fluid_multigrid multigrid.cpp)
-TARGET_SOURCES(fluid_multigrid PRIVATE ${CXX_SRC} ${F_SRC})
+TARGET_SOURCES(fluid_multigrid PRIVATE VCTwoFluidStaggeredStokesOperator.cpp VCTwoFluidStaggeredStokesBoxRelaxationFACOperator.cpp RBGS.f)
 TARGET_LINK_LIBRARIES(fluid_multigrid IBAMR::IBAMR2d)
 
-CONFIGURE_FILE(input2d_five ${CMAKE_CURRENT_BINARY_DIR}/tests/fluid_multigrid/input2d_five COPYONLY)
+CONFIGURE_FILE(input2d_five ${CMAKE_CURRENT_BINARY_DIR}/input2d_five COPYONLY)
 
 ADD_SUBDIRECTORY(tests)
