--- a/tests/multigrid/CMakeLists.txt
+++ b/tests/multigrid/CMakeLists.txt
@@ -10,4 +10,4 @@ TARGET_INCLUDE_DIRECTORIES(multigrid PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")
 TARGET_LINK_LIBRARIES(multigrid PRIVATE IBAMR::IBAMR2d)
 
 TARGET_SOURCES(fluid_multigrid PRIVATE FullFACPreconditioner.cpp)
-SET_TARGET_PROPERTIES(fluid_multigrid PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/tests/fluid_multigrid" OUTPUT_NAME main2d)
+#SET_TARGET_PROPERTIES(fluid_multigrid PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/tests/fluid_multigrid" OUTPUT_NAME main2d)
