Allow for theta to be advected.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,4 +24,8 @@ ADD_EXECUTABLE(time_stepping time_stepping.cpp)
 TARGET_SOURCES(time_stepping PRIVATE VCTwoFluidStaggeredStokesOperator.cpp VCTwoFluidStaggeredStokesBoxRelaxationFACOperator.cpp FullFACPreconditioner.cpp RBGS.f INSVCTwoFluidStaggeredHierarchyIntegrator.cpp)
 TARGET_LINK_LIBRARIES(time_stepping IBAMR::IBAMR2d)
 
+ADD_EXECUTABLE(four_roll_mill four_roll_mill.cpp)
+TARGET_SOURCES(four_roll_mill PRIVATE VCTwoFluidStaggeredStokesOperator.cpp VCTwoFluidStaggeredStokesBoxRelaxationFACOperator.cpp FullFACPreconditioner.cpp RBGS.f INSVCTwoFluidStaggeredHierarchyIntegrator.cpp)
+TARGET_LINK_LIBRARIES(four_roll_mill IBAMR::IBAMR2d)
+
 ADD_SUBDIRECTORY(tests)
