Added an IBMultiphaseHierarchyIntegrator. An IBStrategy can be registered for each phase. Currently a seg-fault occurs at program deletion presumably because a unique_ptr gets deleted twice.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,8 @@ FIND_PACKAGE(IBAMR REQUIRED)
 
 SET(MULTIPHASE_SRC
     src/FullFACPreconditioner.cpp
+    src/IBMultiphaseEulerianForceFunction.cpp
+    src/IBMultiphaseHierarchyIntegrator.cpp
     src/INSVCTwoFluidStaggeredHierarchyIntegrator.cpp
     src/VCTwoFluidStaggeredStokesBoxRelaxationFACOperator.cpp
     src/VCTwoFluidStaggeredStokesOperator.cpp
@@ -17,7 +19,7 @@ TARGET_SOURCES(MultiphaseLib PRIVATE ${MULTIPHASE_SRC})
 TARGET_INCLUDE_DIRECTORIES(MultiphaseLib PUBLIC $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include/> $<INSTALL_INTERFACE:${CMAKE_INSTALL_DIR}/include/>)
 TARGET_LINK_LIBRARIES(MultiphaseLib PUBLIC IBAMR::IBAMR2d)
 
-SET(DIRS apply smooth multigrid time_stepping time_stepping_thn frm)
+SET(DIRS apply smooth multigrid time_stepping time_stepping_thn frm ib_ex)
 FOREACH(_dir ${DIRS})
    ADD_SUBDIRECTORY(${_dir})
 ENDFOREACH()
