--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ TARGET_SOURCES(MultiphaseLib PRIVATE ${MULTIPHASE_SRC})
 TARGET_INCLUDE_DIRECTORIES(MultiphaseLib PUBLIC $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include/> $<INSTALL_INTERFACE:${CMAKE_INSTALL_DIR}/include/>)
 TARGET_LINK_LIBRARIES(MultiphaseLib PUBLIC IBAMR::IBAMR2d)
 
-SET(DIRS apply smooth multigrid time_stepping time_stepping_thn frm ib_ex)
+SET(DIRS apply smooth multigrid time_stepping time_stepping_thn frm ib_ex ib_peristalsis)
 FOREACH(_dir ${DIRS})
    ADD_SUBDIRECTORY(${_dir})
 ENDFOREACH()
