Added convergence tester to four roll mill examples.

--- a/frm/CMakeLists.txt
+++ b/frm/CMakeLists.txt
@@ -1,3 +1,6 @@
 ADD_EXECUTABLE(frm four_roll_mill.cpp)
 TARGET_LINK_LIBRARIES(frm MultiphaseLib)
 
+ADD_EXECUTABLE(frm_convergence convergence_tester.cpp)
+TARGET_LINK_LIBRARIES(frm_convergence MultiphaseLib)
+
