--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ SET(MULTIPHASE_SRC
 
 ADD_LIBRARY(MultiphaseLib)
 TARGET_SOURCES(MultiphaseLib PRIVATE ${MULTIPHASE_SRC})
-TARGET_INCLUDE_DIRECTORIES(MultiphaseLib PUBLIC $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include/> $<INSTALL_INTERFACE:${CMAKE_INSTALL_DIR}/include/>)
+TARGET_INCLUDE_DIRECTORIES(MultiphaseLib PUBLIC $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include/> $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/>)
 TARGET_LINK_LIBRARIES(MultiphaseLib PUBLIC IBAMR::IBAMR2d)
 
 INSTALL(DIRECTORY ${PROJECT_SOURCE_DIR}/include/multiphase DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
