--- a/cmake/MultiphaseConfig.cmake.in
+++ b/cmake/MultiphaseConfig.cmake.in
@@ -4,4 +4,4 @@
 SET(IBAMR_ROOT "@IBAMR_ROOT@")
 FIND_PACKAGE(IBAMR REQUIRED)
 
-INCLUDE(${CMAKE_CURRENT_LIST_DIR}/KernelPackTargets.cmake)
+INCLUDE(${CMAKE_CURRENT_LIST_DIR}/MultiphaseTargets.cmake)
