--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ SET(MULTIPHASE_SRC
     src/FullFACPreconditioner.cpp
     src/IBMultiphaseCrossLinks.cpp
     src/IBMultiphaseEulerianForceFunction.cpp
+    src/IBMultiphaseScaledEulerianForceFunction.cpp
     src/IBMultiphaseHierarchyIntegrator.cpp
     src/INSVCTwoFluidConvectiveManager.cpp
     src/INSVCTwoFluidStaggeredHierarchyIntegrator.cpp
