--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ FIND_PACKAGE(IBAMR REQUIRED)
 SET(MULTIPHASE_SRC
     src/CFMultiphaseOldroydB.cpp
     src/FullFACPreconditioner.cpp
+    src/INSVCTwoFluidConvectiveManager.cpp
     src/INSVCTwoFluidStaggeredHierarchyIntegrator.cpp
     src/VCTwoFluidStaggeredStokesBoxRelaxationFACOperator.cpp
     src/VCTwoFluidStaggeredStokesOperator.cpp
@@ -18,7 +19,7 @@ TARGET_SOURCES(MultiphaseLib PRIVATE ${MULTIPHASE_SRC})
 TARGET_INCLUDE_DIRECTORIES(MultiphaseLib PUBLIC $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include/> $<INSTALL_INTERFACE:${CMAKE_INSTALL_DIR}/include/>)
 TARGET_LINK_LIBRARIES(MultiphaseLib PUBLIC IBAMR::IBAMR2d)
 
-SET(DIRS apply smooth multigrid time_stepping time_stepping_thn frm physical_bc)
+SET(DIRS apply smooth multigrid time_stepping time_stepping_thn frm physical_bc convective_op)
 FOREACH(_dir ${DIRS})
    ADD_SUBDIRECTORY(${_dir})
 ENDFOREACH()
