Get the complex fluid code working with IBAMR master.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,10 +5,9 @@ PROJECT(MultiphaseStokes LANGUAGES C CXX Fortran)
 FIND_PACKAGE(IBAMR REQUIRED)
 
 SET(MULTIPHASE_SRC
+    src/CFMultiphaseOldroydB.cpp
     src/FullFACPreconditioner.cpp
     src/INSVCTwoFluidStaggeredHierarchyIntegrator.cpp
-    src/ScaleStress.cpp
-    src/StressRelaxation.cpp
     src/VCTwoFluidStaggeredStokesBoxRelaxationFACOperator.cpp
     src/VCTwoFluidStaggeredStokesOperator.cpp
     src/RBGS.f
