Add apply op and advecting Thn tests.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -20,7 +20,7 @@ ADD_CUSTOM_TARGET(tests)
 #    only compiles the IBFE tests.
 # 2. all input and output files in these source directories are symlinked into
 #    their corresponding build directories.
-SET(TEST_DIRECTORIES frm multigrid time_stepping)
+SET(TEST_DIRECTORIES apply multigrid time_stepping time_stepping_thn frm)
 
 FOREACH(_dir ${TEST_DIRECTORIES})
   ADD_CUSTOM_TARGET("tests-${_dir}")
@@ -104,9 +104,11 @@ FOREACH(_dir ${TEST_DIRECTORIES})
     VERBATIM)
 ENDFOREACH()
 
-SETUP_2D(frm four_roll_mill.cpp)
-SETUP_2D(time_stepping time_stepping.cpp)
+SETUP_2D(apply apply.cpp)
 SETUP_2D(multigrid multigrid.cpp)
+SETUP_2D(time_stepping time_stepping.cpp)
+SETUP_2D(time_stepping_thn time_stepping_thn.cpp)
+SETUP_2D(frm four_roll_mill.cpp)
 
 # Find numdiff, if possible (we only need it for tests so its not essential that
 # we find it now)
