Introduce base class for the hierarchy integrator in preparation for new style of integrator.
(cherry picked from commit a2e83ee764218bb049a6ddfb114f3682754b2a20)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ SET(MULTIPHASE_SRC
     src/IBMultiphaseHierarchyIntegrator.cpp
     src/MultiphaseConvectiveManager.cpp
     src/MultiphaseStaggeredHierarchyIntegrator.cpp
+    src/MultiphaseStandardHierarchyIntegrator.cpp
     src/MultiphaseStaggeredStokesBoxRelaxationFACOperator.cpp
     src/MultiphaseStaggeredStokesOperator.cpp
     src/RBGS.f
