--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -105,7 +105,9 @@ FOREACH(_dir ${TEST_DIRECTORIES})
 ENDFOREACH()
 
 SETUP_2D(apply apply.cpp)
+SETUP_2D(apply applyStokesBlock.cpp)
 SETUP_2D(multigrid multigrid.cpp)
+SETUP_2D(multigrid multigridStokesBlock.cpp)
 SETUP_2D(time_stepping time_stepping.cpp)
 SETUP_2D(time_stepping_thn time_stepping_thn.cpp)
 SETUP_2D(frm four_roll_mill.cpp)
