Write Stokes block operator and add driver programs for applying and solving it.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,8 @@ SET(MULTIPHASE_SRC
     src/MultiphaseStaggeredHierarchyIntegrator.cpp
     src/MultiphaseStaggeredStokesBoxRelaxationFACOperator.cpp
     src/MultiphaseStaggeredStokesOperator.cpp
+    src/MultiphaseStaggeredStokesBlockFACOperator.cpp
+    src/MultiphaseStaggeredStokesBlockOperator.cpp
     src/RBGS.f
     )
 
