--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -108,6 +108,7 @@ SETUP_2D(apply apply.cpp)
 SETUP_2D(apply applyStokesBlock.cpp)
 SETUP_2D(multigrid multigrid.cpp)
 SETUP_2D(multigrid multigridStokesBlock.cpp)
+SETUP_2D(multigrid pressureSolve.cpp)
 SETUP_2D(time_stepping time_stepping.cpp)
 SETUP_2D(time_stepping_thn time_stepping_thn.cpp)
 SETUP_2D(frm four_roll_mill.cpp)
