First implementation of full block preconditioner.
Move some functions into the utility_functions header.

WIP. Code compiles and runs but solver stalls.

Block preconditioner works for uniform volume fraction on uniform grids.

Add input file for variable volume fraction. Fix zero initial guess for preconditioner.

Fill ghost cells on dense hierarchy for locally refined regions.

Fortran implementation of stokes block smoother

Fully working Fortran smoother for Stokes block

Complete block PC tests and remove unused cpp gauss-seidel code.

Correct the sign on drag to be consistent with other operators.

Fortran routines for finite difference operators

Update volume fraction as needed in Block PC

Minor corrections to fd fortran operators

WIP: HierarchyIntegrator with BLOCK and Fortran ops

Fixes for fortran finite difference ops

Fixed fortran code to correctly handle varThn. All tests pass.

Minor fixes to update volume fraction and hierarchy integrator.

Update MultiphaseHierarchyIntegrator with a preconditioner class that correctly sets up the preconditioner.

Add test for block preconditioner with frm.

Move fortran file to the source directory.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,10 @@ SET(MULTIPHASE_SRC
     src/MultiphaseStaggeredStokesOperator.cpp
     src/MultiphaseStaggeredStokesBlockFACOperator.cpp
     src/MultiphaseStaggeredStokesBlockOperator.cpp
+    src/MultiphaseStaggeredStokesBlockPreconditioner.cpp
     src/RBGS.f
+    src/VRBGS.f
+    src/FDOPS.f
     )
 
 ADD_LIBRARY(MultiphaseLib)
