WIP: HierarchyIntegrator with BLOCK and Fortran ops

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ SET(MULTIPHASE_SRC
     src/MultiphaseStaggeredStokesBlockPreconditioner.cpp
     src/RBGS.f
     src/VRBGS.f
+    include/multiphase/private/FDOPS.f
     )
 
 ADD_LIBRARY(MultiphaseLib)
