Add more fortran operators. Add tests for all the finite difference operators.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -20,7 +20,7 @@ ADD_CUSTOM_TARGET(tests)
 #    only compiles the IBFE tests.
 # 2. all input and output files in these source directories are symlinked into
 #    their corresponding build directories.
-SET(TEST_DIRECTORIES apply multigrid time_stepping time_stepping_thn frm convective_op physical_bc)
+SET(TEST_DIRECTORIES apply multigrid time_stepping time_stepping_thn frm convective_op physical_bc fd_operators)
 
 FOREACH(_dir ${TEST_DIRECTORIES})
   ADD_CUSTOM_TARGET("tests-${_dir}")
@@ -116,6 +116,7 @@ SETUP_2D(convective_op convective_op.cpp)
 SETUP_2D(physical_bc apply.cpp)
 SETUP_2D(physical_bc channel.cpp)
 SETUP_2D(physical_bc solve.cpp)
+SETUP_2D(fd_operators fd_operator.cpp)
 
 # Find numdiff, if possible (we only need it for tests so its not essential that
 # we find it now)
